--- a/www/index.html
+++ b/www/index.html
@@ -198,7 +198,10 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-thumbs-up"></i></div>
             <h4 class="title"><a href="">Window Cleaning</a></h4>
-            <p class="description">We do Window Cleaning (description here)</p>
+            <p class="description">Commercial & Residential.<br>
+              Inside & Outside.<br>
+              Up to 4 stories high, all from the safety of the ground using the latest industry leading techniques.
+              With over 30 years experience in cleaning windows, your glass is in safe hands! Once off, or regular cleaning, we are sure to give you a clear view!</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-thumbs-up"></i></div>
