--- a/www/index.html
+++ b/www/index.html
@@ -205,28 +205,21 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-thumbs-up"></i></div>
-            <h4 class="title"><a href="">Gutters emptied</a></h4>
-            <p class="description">We do Gutters emptied (description here)</p>
+            <h4 class="title"><a href="">Office cleaning</a></h4>
+            <p class="description">A clean, tidy and sanitised area to work in is very important and we aim to please. 
+              We can complete daily or weekly cleans to your office environment ensuring you and your workforce can achieve your potential.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-thumbs-up"></i></div>
-            <h4 class="title"><a href="">Powerwashing</a></h4>
-            <p class="description">We do Powerwashing (description here)</p>
+            <h4 class="title"><a href="">Gutters emptied</a></h4>
+            <p class="description">We can empty your gutters from the safety of the ground using the latest advances in equipment and technology. 
+              We inspect each gutter before and after and can provide a free video report if requested.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="icofont-thumbs-up"></i></div>
-            <h4 class="title"><a href="">Office cleaning</a></h4>
-            <p class="description">We do Office cleaning (description here)</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-thumbs-up"></i></div>
-            <h4 class="title"><a href="">Residential</a></h4>
-            <p class="description">We do Residential (description here)</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-thumbs-up"></i></div>
-            <h4 class="title"><a href="">Commercial</a></h4>
-            <p class="description">We do Commercial (description here)</p>
+            <h4 class="title"><a href="">Powerwashing</a></h4>
+            <p class="description">Using high pressure without chemicals can clean any property. 
+              Spring cleans, after tenancy cleans, or just a regular maintenance clean, we have the know how and equipment to get your property clean!</p>
           </div>
         </div>
 
