Updated faq's and team

--- a/www/index.html
+++ b/www/index.html
@@ -384,7 +384,7 @@
 
         <div class="section-title">
           <h2>Our Team</h2>
-          <p>Some funny comment about the team :-)</p>
+          <p>This is our ugly mugs!</p>
         </div>
 
         <div class="row">
@@ -397,8 +397,8 @@
             <div class="member">
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Tim Beeston</h4>
-                <span>CEO</span>
+                <h4>Tim</h4>
+                <span>Chief Dosser & coffee consumer</span>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
@@ -413,8 +413,8 @@
             <div class="member">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Daragh Beeston</h4>
-                <span>CEO's helper ;-)</span>
+                <h4>Daragh</h4>
+                <span>The actual worker</span>
                 <div class="social">
                   <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
@@ -440,50 +440,38 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Frequently Asked Questions (or maybe testimonials?)</h2>
+          <h2>Frequently Asked Questions</h2>
         </div>
 
         <div class="row  d-flex align-items-stretch">
 
           <div class="col-lg-6 faq-item" data-aos="fade-up">
-            <h4>Frequently Asked Question?</h4>
+            <h4>How much do you charge?</h4>
             <p>
-              Answer to a frequently asked question or a quote from a happy customer.
+              Loads. But we will work with you and your budget, so give us a call and find out how we can help you today!
             </p>
           </div>
 
           <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="100">
-            <h4>Frequently Asked Question?</h4>
+            <h4>Will you scratch my new glass?</h4>
             <p>
-              Answer to a frequently asked question or a quote from a happy customer.
+              We will NOT. We use industry leading equipment that ensures clean glass without any damage. 
+              With many new options on glass effects and finishes we stay up to date with how to keep it clean. 
+              If you have specific requirements, we will work with you on the best options too.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="200">
-            <h4>Frequently Asked Question?</h4>
+            <h4>Do you clean the window frames?</h4>
             <p>
-              Answer to a frequently asked question or a quote from a happy customer.
+              We clean outside frames included in the price! Inside frames get a wipe down as we go, but we also offer a complete frame restoration service. Give us a call for more info.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="300">
-            <h4>Frequently Asked Question?</h4>
+            <h4>Will you clean the windows after my builder?</h4>
             <p>
-              Answer to a frequently asked question or a quote from a happy customer.
-            </p>
-          </div>
-
-          <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="400">
-            <h4>Frequently Asked Question?</h4>
-            <p>
-              Answer to a frequently asked question or a quote from a happy customer.
-            </p>
-          </div>
-
-          <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="500">
-            <h4>Frequently Asked Question?</h4>
-            <p>
-              Answer to a frequently asked question or a quote from a happy customer.
+              No! But we are happy to recommend other cleaner who specialise in this type of post construction cleaning.
             </p>
           </div>
 
@@ -506,15 +494,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>Glenbeigh, Co. Kerry, IRELAND</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="info-box">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>timbeeston@me.com</p>
+              <p>Killarney, Co. Kerry</p>
             </div>
           </div>
 
@@ -523,6 +503,14 @@
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
               <p>087 222 4117</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="info-box">
+              <i class="bx bx-envelope"></i>
+              <h3>Email Us</h3>
+              <p>timbeeston@me.com</p>
             </div>
           </div>
 
@@ -599,21 +587,20 @@
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Window cleaning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Office cleaning</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Gutter emptied</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Powerwashing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Office cleaning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Residential and Commercial</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Enter your email address to get notified of our special offers:</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
