--- a/www/index.html
+++ b/www/index.html
@@ -514,7 +514,7 @@
             </div>
           </div>
 
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-lg-6 form-group">
@@ -541,7 +541,7 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
 
         </div>
 
