Updated social media info

--- a/www/index.html
+++ b/www/index.html
@@ -46,10 +46,10 @@
         <i class="icofont-phone"></i> 087 222 4117
       </div>
       <div class="social-links float-right">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/tim_beeston" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.facebook.com/timbeestoncleaning" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/timbeestoncleaning/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/tim-beeston-8a062313/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
     </div>
   </section>
@@ -400,10 +400,10 @@
                 <h4>Tim</h4>
                 <span>Chief Dosser & coffee consumer</span>
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://twitter.com/tim_beeston"><i class="icofont-twitter"></i></a>
+                  <a href="https://www.facebook.com/timbeestoncleaning"><i class="icofont-facebook"></i></a>
+                  <a href="https://www.instagram.com/timbeestoncleaning/"><i class="icofont-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/tim-beeston-8a062313/"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -565,10 +565,10 @@
               <strong>Email:</strong> timbeeston@me.com<br>
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://twitter.com/tim_beeston" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/timbeestoncleaning" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/timbeestoncleaning/" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/tim-beeston-8a062313/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
 
