--- a/www/index.html
+++ b/www/index.html
@@ -559,8 +559,8 @@
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Tim Beeston Cleaning</h3>
             <p>
-              Glenbeigh <br>
-              Co.Kerry, IRELAND<br><br>
+              Killarney <br>
+              Co.Kerry<br><br>
               <strong>Phone:</strong> 087 222 4117<br>
               <strong>Email:</strong> timbeeston@me.com<br>
             </p>
@@ -576,10 +576,10 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact Us</a></li>
             </ul>
           </div>
 
