More updated links

--- a/www/index.html
+++ b/www/index.html
@@ -586,10 +586,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Window cleaning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Office cleaning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gutter emptied</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Powerwashing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Window cleaning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Office cleaning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Gutter emptied</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Powerwashing</a></li>
             </ul>
           </div>
 
