Updated daragh's social media

--- a/www/index.html
+++ b/www/index.html
@@ -416,10 +416,8 @@
                 <h4>Daragh</h4>
                 <span>The actual worker</span>
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://twitter.com/daraghbeeston"><i class="icofont-twitter"></i></a>
+                  <a href="https://www.instagram.com/daraghbphotography/"><i class="icofont-instagram"></i></a>
                 </div>
               </div>
             </div>
