Added insta feed

--- a/www/index.html
+++ b/www/index.html
@@ -591,6 +591,13 @@
             </ul>
           </div>
 
+          <div class="embedsocial-hashtag" data-ref="e511f33f5fcf35e9574113dcea01a4b9534b9283">
+            <a class="feed-powered-by-es" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a>
+          </div>
+          <script>
+          (function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));
+          </script>
+
           <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Enter your email address to get notified of our special offers:</p>
