Commented out title and description in gallery

--- a/www/index.html
+++ b/www/index.html
@@ -251,8 +251,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -265,8 +265,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -279,8 +279,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -293,8 +293,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -307,8 +307,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -321,8 +321,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -335,8 +335,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -349,8 +349,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
@@ -363,8 +363,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Title</h4>
-                <p>Description</p>
+                <!-- <h4>Title</h4>
+                <p>Description</p> -->
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
                   <!-- <a href="#" title="More Details"><i class="icofont-external-link"></i></a> -->
