Added padding to insta widged div

--- a/www/index.html
+++ b/www/index.html
@@ -591,7 +591,7 @@
             </ul>
           </div>
 
-          <div class="embedsocial-hashtag" data-ref="e511f33f5fcf35e9574113dcea01a4b9534b9283">
+          <div class="embedsocial-hashtag" data-ref="e511f33f5fcf35e9574113dcea01a4b9534b9283" style="padding-left: 20px;">
             <a class="feed-powered-by-es feed-powered-by-es-slider" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a>
           </div>
           <script>
